--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,16 +7,16 @@ set(SOURCE_FILES
         src/assembler.cpp
         src/assembler.h
         src/bytecode.h
-        src/lexer.cpp
-        src/lexer.h
+        src/parsing/lexer.cpp
+        src/parsing/lexer.h
         src/main.cpp
-        src/parser.cpp
-        src/parser.h
-        src/scope.h
-        src/symbol.h
-        src/token.h
+        src/parsing/parser.cpp
+        src/parsing/parser.h
+        src/parsing/scope.h
+        src/parsing/symbol.h
+        src/parsing/token.h
         src/util.h
         src/vm.cpp
-        src/vm.h src/ast.h src/ast.cpp src/pretty-printer.cpp src/pretty-printer.h)
+        src/vm.h src/ast/ast.h src/ast/ast.cpp src/ast/pretty-printer.cpp src/ast/pretty-printer.h)
 
 add_executable(PL0 ${SOURCE_FILES})
