--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(SOURCE_FILES
         src/assembler.cpp
-        src/assembler.h
-        src/bytecode.h
+        src/bytecode/assembler.h
+        src/bytecode/bytecode.h
         src/parsing/lexer.cpp
         src/parsing/lexer.h
         src/main.cpp
@@ -17,6 +17,6 @@ set(SOURCE_FILES
         src/parsing/token.h
         src/util.h
         src/vm.cpp
-        src/vm.h src/ast/ast.h src/ast/ast.cpp src/ast/pretty-printer.cpp src/ast/pretty-printer.h src/ast/dot-generator.cpp src/ast/dot-generator.h src/code-generator.cpp src/code-generator.h)
+        src/vm.h src/ast/ast.h src/ast/ast.cpp src/ast/pretty-printer.cpp src/ast/pretty-printer.h src/ast/dot-generator.cpp src/ast/dot-generator.h src/bytecode/code-generator.cpp src/bytecode/code-generator.h)
 
 add_executable(PL0 ${SOURCE_FILES})
